--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -218,8 +218,8 @@
                         <artifactId>maven-war-plugin</artifactId>
                         <version>2.1.1</version>
                         <configuration>
-                            <warSourceDirectory>war</warSourceDirectory>
-                            <webappDirectory>war</webappDirectory>
+                            <warSourceDirectory>src/main/webapp/</warSourceDirectory>
+                            <webappDirectory>src/main/webapp/</webappDirectory>
                             <webXml>src/jetty/web.xml</webXml>
                             <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
                             <outputDirectory>deployments</outputDirectory>
@@ -236,13 +236,13 @@
                                 <phase>prepare-package</phase>
                                 <configuration>
                                     <tasks>
-                                        <copy file="src/jboss/web.xml" toDir="war/WEB-INF"
+                                        <copy file="src/jboss/web.xml" toDir="src/main/webapp/WEB-INF"
                                             overwrite="true" />
 
-                                        <delete file="war/WEB-INF/jetty-env.xml" />
-                                        <delete file="war/WEB-INF/classes/jndi.properties" />
+                                        <delete file="src/main/webapp/WEB-INF/jetty-env.xml" />
+                                        <delete file="src/main/webapp/WEB-INF/classes/jndi.properties" />
 
-                                        <copy todir="war/app/">
+                                        <copy todir="src/main/webapp/app/">
                                             <fileset dir="war.cache/app/" />
                                         </copy>
                                     </tasks>
@@ -301,15 +301,15 @@
                                 <phase>prepare-package</phase>
                                 <configuration>
                                     <tasks>
-                                        <copy file="src/jboss/web.xml" toDir="war/WEB-INF"
+                                        <copy file="src/jboss/web.xml" toDir="src/main/webapp/WEB-INF"
                                             overwrite="true" />
 
-                                        <delete file="war/WEB-INF/jetty-env.xml" />
+                                        <delete file="src/main/webapp/WEB-INF/jetty-env.xml" />
 
-                                        <delete file="war/WEB-INF/classes/jndi.properties" />
+                                        <delete file="src/main/webapp/WEB-INF/classes/jndi.properties" />
 
                                         <copy todir="war.cache/app/">
-                                            <fileset dir="war/app/" />
+                                            <fileset dir="src/main/webapp/app/" />
                                         </copy>
 
                                         <exec executable="git">
@@ -341,7 +341,7 @@
         <profile>
             <id>integration-test</id>
             <properties>
-                <profile.testOutputDirectory>war/WEB-INF/classes</profile.testOutputDirectory>
+                <profile.testOutputDirectory>src/main/webapp/WEB-INF/classes</profile.testOutputDirectory>
             </properties>
 
             <build>
@@ -396,7 +396,7 @@
                                 <phase>process-test-resources</phase>
                                 <configuration>
                                     <tasks>
-                                        <copy file="src/jboss/web.xml" toDir="war/WEB-INF" overwrite="true" />
+                                        <copy file="src/jboss/web.xml" toDir="src/main/webapp/WEB-INF" overwrite="true" />
                                     </tasks>
                                 </configuration>
                                 <goals>
@@ -515,7 +515,7 @@
 
     <build>
         <finalName>\${project.artifactId}</finalName>
-        <outputDirectory>war/WEB-INF/classes</outputDirectory>
+        <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
 
         <plugins>
             <plugin>
@@ -526,10 +526,10 @@
                     <inplace>true</inplace>
                     <logLevel>INFO</logLevel>
                     <runTarget>App.html</runTarget>
-                    <warSourceDirectory>war</warSourceDirectory>
+                    <warSourceDirectory>src/main/webapp/</warSourceDirectory>
                     <extraJvmArgs>-Xmx512m</extraJvmArgs>
                     <treeLogger>true</treeLogger>
-                    <hostedWebapp>war</hostedWebapp>
+                    <hostedWebapp>src/main/webapp/</hostedWebapp>
                 </configuration>
                 <executions>
                     <execution>
@@ -557,7 +557,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <warSourceDirectory>war</warSourceDirectory>
+                    <warSourceDirectory>src/main/webapp/</warSourceDirectory>
                     <webXml>\${webXmlPath}</webXml>
                     <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
                 </configuration>
@@ -583,9 +583,9 @@
                                 <!-- The gwt-maven-plugin use the war source folder as it's build 
                                     directory. We need to cleanup after we'd run the plugin and remove all GWT 
                                     related artifacts that are required to run the hosted mode. -->
-                                <delete dir="war/WEB-INF/classes" />
-                                <delete dir="war/WEB-INF/lib" />
-                                <delete dir="war/App" />
+                                <delete dir="src/main/webapp/WEB-INF/classes" />
+                                <delete dir="src/main/webapp/WEB-INF/lib" />
+                                <delete dir="src/main/webapp/App" />
                                 <delete dir="target" />
                             </tasks>
                         </configuration>
