integration-tests need to specify src/main/webapp as war directory now

--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -1271,6 +1271,10 @@
                                     <name>errai.hosted_mode_testing</name>
                                     <value>true</value>
                                 </property>
+                                <property>
+                                    <name>gwt.args</name>
+                                    <value>-war src/main/webapp</value>
+                                </property>
                             </systemProperties>
                         </configuration>
                     </plugin>
