--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -383,6 +383,10 @@
                                     <name>errai.hosted_mode_testing</name>
                                     <value>true</value>
                                  </property>
+                                 <property>
+                                    <name>gwt.args</name>
+                                    <value>-war src/main/webapp</value>
+                                </property>
                             </systemProperties>
                         </configuration>
                     </plugin>
