--- a/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -39,7 +39,7 @@
       -->
 #end
 
-      <errai.version>2.0.Beta2</errai.version>
+      <errai.version>2.0-SNAPSHOT</errai.version>
       <gwt.version>2.4.0</gwt.version>
       <gwt.maven.version>2.4.0</gwt.maven.version>
       <mvel.version>2.1.Beta6</mvel.version>
