--- a/bus-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/bus-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>Errai::Archetype</name>
+    <name>\${artifactId}</name>
     <groupId>\${groupId}</groupId>
     <artifactId>\${artifactId}</artifactId>
     <version>\${version}</version>
@@ -26,8 +26,8 @@
 
     <properties>
         <errai.version>${errai.target.version}</errai.version>
-        <gwt.version>2.3.0</gwt.version>
-        <gwt.maven.version>2.3.0</gwt.maven.version>
+        <gwt.version>2.4.0</gwt.version>
+        <gwt.maven.version>2.4.0</gwt.maven.version>
         <slf4j.version>1.6.1</slf4j.version>
         <webXmlPath>src/jetty/web.xml</webXmlPath>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
