--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>Errai::Archetypes::CDI</name>
+    <name>\${artifactId}</name>
     <groupId>\${groupId}</groupId>
     <artifactId>\${artifactId}</artifactId>
     <packaging>war</packaging>
@@ -13,10 +13,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <errai.version>${errai.target.version}</errai.version>
         <errai.cdi.version>${errai.cdi.target.version}</errai.cdi.version>
-        <gwt.version>2.3.0</gwt.version>
+        <gwt.version>2.4.0</gwt.version>
         <hsqldb.version>1.8.0.7</hsqldb.version>
         <weld.version>1.1.5.Final</weld.version>
-        <gwt.maven.version>2.3.0</gwt.maven.version>
+        <gwt.maven.version>2.4.0</gwt.maven.version>
         <mvel.version>2.1.Beta6</mvel.version>
         <jetty.version>6.1.25</jetty.version>
         <slf4j.version>1.6.1</slf4j.version>
