--- a/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -11,7 +11,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>Errai::JAXRS::Archetype</name>
+  <name>\${artifactId}</name>
   <groupId>\${groupId}</groupId>
   <artifactId>\${artifactId}</artifactId>
   <packaging>war</packaging>
@@ -43,8 +43,8 @@
   <properties>
     <errai.version>${errai.target.version}</errai.version>
     <errai.jaxrs.version>${errai.jaxrs.target.version}</errai.jaxrs.version>
-    <gwt.version>2.3.0</gwt.version>
-    <gwt.maven.version>2.3.0</gwt.maven.version>
+    <gwt.version>2.4.0</gwt.version>
+    <gwt.maven.version>2.4.0</gwt.maven.version>
     <webXmlPath>src/jetty/web.xml</webXmlPath>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
