--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -17,7 +17,7 @@
         <hsqldb.version>1.8.0.7</hsqldb.version>
         <weld.version>1.1.5.Final</weld.version>
         <gwt.maven.version>2.4.0</gwt.maven.version>
-        <mvel.version>2.1.Beta6</mvel.version>
+        <mvel.version>2.1.Beta8</mvel.version>
         <jetty.version>6.1.25</jetty.version>
         <slf4j.version>1.6.1</slf4j.version>
         <uel.impl.version>2.1.2-b04</uel.impl.version>
@@ -260,6 +260,12 @@
                     <artifactId>jetty-naming</artifactId>
                     <version>\${jetty.version}</version>
                     <scope>provided</scope>
+                </dependency>
+                
+                <dependency>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-servlet</artifactId>
+                    <version>7.2.1.v20101111</version>
                 </dependency>
 
                 <dependency>
