--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -15,7 +15,7 @@
         <errai.cdi.version>${errai.cdi.target.version}</errai.cdi.version>
         <gwt.version>2.4.0</gwt.version>
         <hsqldb.version>1.8.0.7</hsqldb.version>
-        <weld.version>1.1.5.Final</weld.version>
+        <weld.version>1.1.6.Final</weld.version>
         <gwt.maven.version>2.4.0</gwt.maven.version>
         <mvel.version>2.1.Beta8</mvel.version>
         <jetty.version>6.1.25</jetty.version>
@@ -225,6 +225,8 @@
                                               overwrite="true"/>
                                         <copy file="src/jetty/jndi.properties" toDir="src/main/webapp/WEB-INF/classes/"
                                               overwrite="true"/>
+                                        <copy file="src/jetty/jndi.properties" toDir="src/main/resources/"
+                                              overwrite="true"/>
                                     </tasks>
                                 </configuration>
                                 <goals>
@@ -262,7 +264,6 @@
                     <scope>provided</scope>
                 </dependency>
                 
-                <!-- This is the same version used to compile Weld 1.1.5.Final. -->
                 <dependency>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-servlet</artifactId>
