--- a/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cdi-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -12,7 +12,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <errai.version>${errai.target.version}</errai.version>
-        <errai.cdi.version>${errai.cdi.target.version}</errai.cdi.version>
         <gwt.version>2.4.0</gwt.version>
         <hsqldb.version>1.8.0.7</hsqldb.version>
         <weld.version>1.1.6.Final</weld.version>
@@ -112,26 +111,26 @@
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-cdi-client</artifactId>
-            <version>\${errai.cdi.version}</version>
+            <version>\${errai.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-javax-enterprise</artifactId>
-            <version>\${errai.cdi.version}</version>
+            <version>\${errai.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-weld-integration</artifactId>
-            <version>\${errai.cdi.version}</version>
+            <version>\${errai.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-cdi-jetty</artifactId>
-            <version>\${errai.cdi.version}</version>
+            <version>\${errai.version}</version>
         </dependency>
 
         <!-- CDI Development Utils -->
@@ -206,42 +205,17 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>jetty.package</id>
-                                <phase>prepare-package</phase>
-                                <configuration>
-                                    <tasks>
-                                        <delete file="src/main/webapp/WEB-INF/jetty-deployment-structure.xml"/>
-                                        <copy file="src/jetty/web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <copy file="src/jetty/jetty-env.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <copy file="src/jetty/jndi.properties" toDir="src/main/webapp/WEB-INF/classes/"
-                                              overwrite="true"/>
-                                        <copy file="src/jetty/jndi.properties" toDir="src/main/resources/"
-                                              overwrite="true"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <webDescriptor>jetty</webDescriptor>
+            </properties>
         </profile>
 
         <profile>
             <!-- It's required that Jetty's plus option is enabled (OPTIONS=plus,..) -->
             <id>jetty7+</id>
+            <properties>
+                <webDescriptor>jetty7+</webDescriptor>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>org.mortbay.jetty</groupId>
@@ -276,41 +250,13 @@
                     <version>\${errai.version}</version>
                     <scope>provided</scope>
                 </dependency>
-
             </dependencies>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>jetty.package</id>
-                                <phase>prepare-package</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="src/jetty7+/web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <!-- We don't need jetty-env as we are using the BeanManagerResourceBindingListener to
-                                   bind the BeanManager in JNDI. -->
-                                        <delete file="src/main/webapp/WEB-INF/classes/jetty-env.properties"/>
-                                        <delete file="src/main/webapp/WEB-INF/classes/jndi.properties"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
         <profile>
             <id>jboss6</id>
             <properties>
-                <webDescriptor>jboss</webDescriptor>
+                <webDescriptor>jboss6</webDescriptor>
             </properties>
             <dependencies>
 
@@ -367,12 +313,6 @@
                 </dependency>
 
                 <dependency>
-                    <groupId>org.mvel</groupId>
-                    <artifactId>mvel2</artifactId>
-                    <version>\${mvel.version}</version>
-                </dependency>
-
-                <dependency>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
                     <scope>provided</scope>
@@ -405,22 +345,9 @@
 
                 <dependency>
                     <groupId>org.jboss.errai</groupId>
-                    <artifactId>errai-cdi-client</artifactId>
-                    <version>\${errai.version}</version>
-                    <!--<scope>provided</scope> -->
-                </dependency>
-
-                <dependency>
-                    <groupId>org.jboss.errai</groupId>
                     <artifactId>errai-javax-enterprise</artifactId>
                     <version>\${errai.version}</version>
                     <scope>provided</scope>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.jboss.errai</groupId>
-                    <artifactId>errai-weld-integration</artifactId>
-                    <version>\${errai.version}</version>
                 </dependency>
 
                 <!-- exclude development tools -->
@@ -498,40 +425,6 @@
                     <version>3.0.0.Beta4</version>
                 </dependency>
             </dependencies>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.2</version>
-                        <executions>
-                            <execution>
-                                <id>jboss.package</id>
-                                <phase>prepare-package</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="src/jboss/web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <copy file="src/jboss/jboss-web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <copy file="src/jboss/jboss-beans.xml" toDir="src/main/webapp/META-INF"
-                                              overwrite="true"/>
-
-                                        <delete file="src/main/webapp/WEB-INF/jetty-env.xml"/>
-                                        <delete file="src/main/webapp/WEB-INF/jetty-deployment-structure.xml"/>
-                                        <delete file="src/main/webapp/WEB-INF/classes/jndi.properties"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-
         </profile>
 
         <!-- BEGIN JBOSS AS 7 PROFILE -->
@@ -539,7 +432,7 @@
         <profile>
             <id>jboss7</id>
             <properties>
-                <webDescriptor>jboss</webDescriptor>
+                <webDescriptor>jboss7</webDescriptor>
             </properties>
 
             <dependencies>
@@ -577,12 +470,6 @@
                 </dependency>
 
                 <dependency>
-                    <groupId>org.mvel</groupId>
-                    <artifactId>mvel2</artifactId>
-                    <version>\${mvel.version}</version>
-                </dependency>
-
-                <dependency>
                     <groupId>org.jboss.errai</groupId>
                     <artifactId>errai-ioc</artifactId>
                     <exclusions>
@@ -608,23 +495,11 @@
 
                 <dependency>
                     <groupId>org.jboss.errai</groupId>
-                    <artifactId>errai-cdi-client</artifactId>
-                    <version>\${errai.version}</version>
-                    <!--<scope>provided</scope> -->
-                </dependency>
-
-                <dependency>
-                    <groupId>org.jboss.errai</groupId>
                     <artifactId>errai-javax-enterprise</artifactId>
                     <version>\${errai.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
-                <dependency>
-                    <groupId>org.jboss.errai</groupId>
-                    <artifactId>errai-weld-integration</artifactId>
-                    <version>\${errai.version}</version>
-                </dependency>
                 <!-- Exclude development tools -->
                 <dependency>
                     <groupId>org.jboss.errai</groupId>
@@ -698,62 +573,13 @@
                     <version>\${jetty.version}</version>
                 </dependency>
             </dependencies>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>2.1.1</version>
-                        <configuration>
-                            <warSourceDirectory>src/main/webapp/</warSourceDirectory>
-                            <webappDirectory>src/main/webapp/</webappDirectory>
-                            <webXml>src/jetty/web.xml</webXml>
-                            <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
-
-                            <archive>
-                                <manifestEntries>
-                                    <Dependencies>org.jboss.as.naming,org.jboss.as.server,org.jboss.msc</Dependencies>
-                                </manifestEntries>
-                            </archive>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.2</version>
-                        <executions>
-                            <execution>
-                                <id>jboss.package</id>
-                                <phase>prepare-package</phase>
-                                <configuration>
-                                    <tasks>
-                                        <copy file="src/jboss/web.xml" toDir="src/main/webapp/WEB-INF"
-                                              overwrite="true"/>
-                                        <copy file="src/jboss/jboss-deployment-structure.xml" toDir="src/main/webapp/WEB-INF"
-                                                                                      overwrite="true"/>
-
-
-                                        <delete file="src/main/webapp/WEB-INF/jetty-env.xml"/>
-                                        <delete file="src/main/webapp/WEB-INF/classes/jndi.properties"/>
-                                        <delete file="src/main/resources/jndi.properties"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
 
         <!-- Begin OpenShift Express Profiles -->
         <profile>
             <id>openshift</id>
             <properties>
-                <webDescriptor>jboss</webDescriptor>
+                <webDescriptor>jboss7</webDescriptor>
             </properties>
 
             <dependencies>
@@ -922,6 +748,7 @@
                             <warSourceDirectory>src/main/webapp/</warSourceDirectory>
                             <webappDirectory>src/main/webapp/</webappDirectory>
                             <webXml>src/jetty/web.xml</webXml>
+                            <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
                             <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
                             <outputDirectory>deployments</outputDirectory>
                         </configuration>
@@ -970,7 +797,7 @@
         <profile>
             <id>openshift-prepare</id>
             <properties>
-                <webDescriptor>jboss</webDescriptor>
+                <webDescriptor>jboss7</webDescriptor>
             </properties>
 
             <dependencies>
@@ -1139,6 +966,7 @@
                             <warSourceDirectory>war.cache</warSourceDirectory>
                             <webappDirectory>war.cache</webappDirectory>
                             <webXml>src/jetty/web.xml</webXml>
+                            <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
                             <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
 
                             <archive>
@@ -1198,35 +1026,9 @@
         <!-- Begin Tomcat 6 and 7 support -->
         <profile>
             <id>tomcat</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>tomcat.package</id>
-                                <phase>prepare-package</phase>
-                                <configuration>
-                                    <tasks>
-                                        <delete file="src/main/webapp/WEB-INF/jetty-deployment-structure.xml"/>
-
-                                        <copy file="src/tomcat/context.xml" toDir="src/main/webapp/META-INF"
-                                              overwrite="true"/>
-                                    </tasks>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
+            <properties>
+                <webDescriptor>tomcat</webDescriptor>
+            </properties>
         </profile>
 
         <!-- Profile that must be enabled when running integration tests (any
@@ -1514,10 +1316,15 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
                 <configuration>
-                    <warSourceDirectory>src/main/webapp/</warSourceDirectory>
-                    <webappDirectory>src/main/webapp/</webappDirectory>
-                    <webXml>src/jetty/web.xml</webXml>
+                    <outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
                     <packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
+
+                    <webResources>
+                        <resource>
+                            <!-- this is relative to the pom.xml directory -->
+                            <directory>src/${webDescriptor}</directory>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
             
@@ -1529,27 +1336,6 @@
                 <configuration>
                     <skipTests>true</skipTests>
                 </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.2</version>
-                <executions>
-                    <execution>
-                        <id>clean.war</id>
-                        <phase>clean</phase>
-                        <configuration>
-                            <tasks>
-                                <!-- FIXME this should be done as an additional resource in the maven-war-plugin -->
-                                <copy file="src/${webDescriptor}/web.xml" toDir="war/WEB-INF" />
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
